server: code restructure and renames
